--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,14 +1,22 @@
+:root {
+    --darkPink: #945f6d;
+    --pink: #f093aa;
+    --darkBlue: #295b5f;
+    --blue: #438586;
+    --light: #ffffff;
+}
+
 body {
     font-family: Helvetica, Arial, sans serif;
-    color: #7c5b63;
+    color: var(--darkPink);
 }
 
 header {
-    color: #DA7B93;
+    color: var(--pink);
 }
 
 .jumbotron {
-    background-color: #1C3334 !important;
+    background-color: var(--darkBlue) !important;
 }
 
 h2 {
@@ -21,7 +29,7 @@ h3 {
 }
 
 a {
-    color: #DA7B93;
+    color: var(--pink);
 }
 
 img {
@@ -30,8 +38,8 @@ img {
 }
 
 #option {
-    background-color: #1C3334;
-    color: #376E6F;
+    background-color: var(--darkBlue);
+    color: var(--blue);
 }
 
 .card {
@@ -40,4 +48,29 @@ img {
 
 nav {
     margin-top: -50px;
+}
+
+button {
+    background-color: var(--darkPink) !important;
+    color: var(--light) !important;
+    border-style: none !important;
+}
+
+.choiceBtn {
+    margin-left: 40%;
+    margin-bottom: 5%;
+}
+
+.lastBtn {
+    margin-left: 45%;
+}
+
+button:hover {
+    background-color: var(--blue) !important;
+    color: var(--light);
+}
+
+button:active {
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
